<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="Settings">

        <EditTextPreference
        android:title="@string/pref_shmack_instance_url_label"
        android:key="@string/pref_shmack_instance_url_key"
        android:defaultValue="@string/pref_shmack_instance_url_default"
        android:inputType="text"
        android:singleLine="false" />

        <EditTextPreference
            android:title="@string/pref_shmack_instance_username_label"
            android:key="@string/pref_shmack_instance_username_key"
            android:defaultValue="@string/pref_shmack_instance_username_default"
            android:inputType="text"
            android:singleLine="true" />

        <EditTextPreference
            android:title="@string/pref_shmack_instance_password_label"
            android:key="@string/pref_shmack_instance_password_key"
            android:defaultValue="@string/pref_shmack_instance_password_default"
            android:inputType="text"
            android:singleLine="true" />

        <EditTextPreference
            android:title="@string/pref_shmack_instance_last_transfer_failure_label"
            android:key="@string/pref_shmack_instance_last_transfer_failure_key"
            android:defaultValue="@string/pref_shmack_instance_last_transfer_failure_default"
            android:inputType="text"
            android:singleLine="false" />

    </PreferenceCategory>

</PreferenceScreen>